// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box renders 1`] = `
.glamor-0 {
  box-sizing: border-box;
  margin: 16px;
  padding-left: 32px;
  padding-right: 32px;
}

<div
  className="glamor-0"
  is={null}
/>
`;

exports[`Box renders with \`is\` prop 1`] = `
.glamor-0 {
  box-sizing: border-box;
}

<section
  className="glamor-0"
  is={null}
/>
`;

exports[`Box renders with props 1`] = `
.glamor-0 {
  box-sizing: border-box;
  width: 100%;
  margin: 8px;
  padding-left: 8px;
  padding-right: 8px;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

@media screen and (min-width:40em) {
  .glamor-0 {
    margin: 16px;
    padding-left: 16px;
    padding-right: 16px;
  }
}

<div
  className="glamor-0"
  is={null}
/>
`;

exports[`Flex renders 1`] = `
.glamor-0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="glamor-0"
  is={null}
/>
`;

exports[`Flex renders with column prop 1`] = `
.glamor-0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  className="glamor-0"
  is={null}
/>
`;

exports[`Flex renders with props 1`] = `
.glamor-0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

<div
  className="glamor-0"
  is={null}
/>
`;

exports[`Flex renders with responsive props 1`] = `
.glamor-0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

@media screen and (min-width:40em) {
  .glamor-0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:40em) {
  .glamor-0 {
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media screen and (min-width:40em) {
  .glamor-0 {
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

<div
  className="glamor-0"
  is={null}
/>
`;

exports[`Grid renders 1`] = `
.glamor-0 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: top;
}

<div
  className="glamor-0"
  is={null}
/>
`;
